# MC_MicroSimilarities

./: CMakeLists.txt  LICENSE  README.md  accuracy.R  accuracy.py  accuracy2.py  auc.py  conanfile.txt  markovian_features.py
scripts/: accuracy.R
src/: CMakeLists.txt
src/algorithm/: AbstractMC.cpp  AbstractMC.hpp  ConfiguredPipeline.hpp  FeatureScoringPipeline.hpp  HOMC.hpp  HOMCDefs.hpp  HOMCFeatures.hpp  HOMCOperations.hpp  HOMCPipeline.hpp  Histogram.hpp  KNNConfusionMC.cpp  KNNConfusionMC.h  KNNMCParameters.cpp  KNNModel.cpp  KNNModel.hpp  LSMC.hpp  MC.cpp  MC.hpp  MCDefs.h  MCFeatures.hpp  MCOperations.cpp  MCOperations.hpp  MCPipeline.hpp  MLConfusedMC.hpp  MarkovChains.hpp  MarkovianKernels.hpp  MarkovianModelFeatures.hpp  Pipeline.hpp  RangedOrderMC.hpp  SVMConfusionMC.hpp  SVMMCParameters.cpp  SVMMarkovianModel.cpp  SVMMarkovianModel.hpp  SVMModel.hpp  SVMPipeline.hpp  Selection.cpp  Series.hpp  SimilarityMetrics.hpp  VariantGenerator.hpp  ZYMC.cpp  (+5 more)
src/app/: CMakeLists.txt  HOMC_pipeline.cpp  MC_pipeline.cpp  ZhengYuan_pipeline.cpp  confusionMatrix.cpp  markovian_features.cpp  markovian_features_analysis.cpp  markovian_features_svm.cpp  protein2ts.cpp  segmentation.cpp  subsetDataset.cpp
src/data/: .gitignore  AAGrouping.hpp  AAIndex1Data.h.in  AAIndexClustering.cpp  AAIndexClustering.hpp  AAIndexDBGET.hpp  CMakeLists.txt  FastaEntry.hpp  LabeledEntry.hpp  ProteinTimeSeries.hpp  SequenceEntry.hpp  UniRefEntry.hpp  aaindex1  dlib_utilities.hpp
src/features/: FeatureScoreAUC.hpp  similarities.hpp
src/include/: LUT.hpp  SimilarityMetrics.hpp  clara.hpp  common.hpp  hashing.hpp
src/mc/: AbstractClassifier.cpp  AbstractClassifier.hpp  AbstractMC.cpp  AbstractMC.hpp  AbstractMCClassifier.cpp  AbstractMCClassifier.hpp  CMakeLists.txt  CompositeMLSequenceClassifier.cpp  CompositeMLSequenceClassifier.hpp  DiscretizedScalesMC.cpp  DiscretizedScalesMC.hpp  FeatureScoringPipeline.hpp  GappedMC.cpp  GappedMC.hpp  Histogram.hpp  KNNConfusionMC.cpp  KNNConfusionMC.hpp  KNNMCParameters.cpp  KNNMCParameters.hpp  KNNModel.cpp  KNNModel.hpp  LSMC.cpp  LSMC.hpp  MC.cpp  MC.hpp  MCBasedMLModel.hpp  MCDefs.h  MCDiscretizedScalesClassifier.cpp  MCDiscretizedScalesClassifier.hpp  MCDiscriminativeClassifier.cpp  MCDiscriminativeClassifier.hpp  MCFeatures.cpp  MCFeatures.hpp  MCKmersClassifier.cpp  MCKmersClassifier.hpp  MCModels.hpp  MCPropensityClassifier.cpp  MCPropensityClassifier.hpp  MCRegularizedClassifier.cpp  MCRegularizedClassifier.hpp  (+37 more)
src/report/: CMakeLists.txt  ConfusionMatrix.cpp  ConfusionMatrix.hpp  CrossValidationStatistics.cpp  CrossValidationStatistics.hpp  EnsembleCrossValidation.cpp  EnsembleCrossValidation.hpp  FeatureScoreAUC.hpp  Timers.hpp  crossvalidation.hpp
src/segmentation/: CMakeLists.txt  SequenceAnnotator.cpp  SequenceAnnotator.hpp  SequenceSegmentation.cpp  SequenceSegmentation.hpp
